--- a/xtermservice/static/templates/xterm.html
+++ b/xtermservice/static/templates/xterm.html
@@ -3,13 +3,13 @@
 
 <head>
   <title>{{.HtmlTitle}}</title>
-  <link rel="stylesheet" href="/{{.UrlRoutePrefix}}/assets/xterm/css/xterm.css" />
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm/lib/xterm.js"></script>
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm-addon-attach/lib/xterm-addon-attach.js"></script>
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm-addon-serialize/lib/xterm-addon-serialize.js"></script>
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm-addon-unicode11/lib/xterm-addon-unicode11.js"></script>
-  <script src="/{{.UrlRoutePrefix}}/assets/xterm-addon-web-links/lib/xterm-addon-web-links.js"></script>
+  <link rel="stylesheet" href="{{.UrlRoutePrefix}}/assets/xterm/css/xterm.css" />
+  <script src="{{.UrlRoutePrefix}}/assets/xterm/lib/xterm.js"></script>
+  <script src="{{.UrlRoutePrefix}}/assets/xterm-addon-attach/lib/xterm-addon-attach.js"></script>
+  <script src="{{.UrlRoutePrefix}}/assets/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
+  <script src="{{.UrlRoutePrefix}}/assets/xterm-addon-serialize/lib/xterm-addon-serialize.js"></script>
+  <script src="{{.UrlRoutePrefix}}/assets/xterm-addon-unicode11/lib/xterm-addon-unicode11.js"></script>
+  <script src="{{.UrlRoutePrefix}}/assets/xterm-addon-web-links/lib/xterm-addon-web-links.js"></script>
   <style>
     html::-webkit-scrollbar,
     body::-webkit-scrollbar,
@@ -48,7 +48,7 @@
 
 <body>
   <div id="terminal"></div>
-  <script src="/{{.UrlRoutePrefix}}/terminal.js"></script>
+  <script src="{{.UrlRoutePrefix}}/terminal.js"></script>
 </body>
 
 </html>
